--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@ html, body, header, nav, h1, a,
 ul, li, strong, main, button, i,
 section, img, div, h2, h3, h4, p, form,
 fieldset, label, input, textarea,
-span, article, footer, time, small {
+span, article, footer, time, small,
+table, thead, tbody, th, tr, td {
   margin: 0;
   padding: 0;
   border: 0;
@@ -49,7 +50,7 @@ h4 {
   display: block;
   padding: 10px;
   width: 600px;
-  margin: 15px auto 40px auto;
+  margin: 15px auto 20px auto;
   min-height: 500;
   box-shadow: -2px 5px 5px 1px #242424;
   -webkit-box-shadow: -2px 5px 5px 1px #242424;
@@ -61,6 +62,7 @@ button.basic-button {
   background-color: #2EBD59;
   cursor: pointer;
   color: white;
+  font-family: 'Open Sans';
   padding: 6px 10px;
   border-radius: 50px;
   white-space: nowrap;
@@ -155,6 +157,7 @@ textarea, input[type="text"] {
 }
 
 table {
+  border-collapse: collapse;
   display: block;
   width: 600px;
   text-align: left;
@@ -176,16 +179,34 @@ th.remove, div.remove {
   width: 40px;
 }
 
+div.remove {
+  text-align: right;
+}
+
+tr {
+  border-bottom: 1px solid #2d2d2d;
+}
+
+td {
+  padding: 4px 0;
+}
+
+tbody > tr:hover {
+  background-color: #141414;
+}
+
 tr:hover button.remove-button {
   display: inline;
 }
 
 button.remove-button {
-  border: 1px solid lightgrey;
+  border: 1px solid #3a3a3a;
   border-radius: 50%;
-  padding: 0 3px;
+  font-family: 'Open Sans';
+  line-height: 100%;
+  margin-right: 5px;
+  padding: 0 4px 1px 4px;
   cursor: pointer;
-  line-height: 99%;
   display: none;
 }
 
@@ -199,9 +220,33 @@ button.remove-button:active {
 }
 
 td > div {
+  font-family: 'Open Sans';
   white-space: nowrap;
   word-wrap: break-word;
   overflow: hidden;
   text-overflow: ellipsis;
 }
 
+/* --- FOOTER --- */
+
+footer {
+  display: block;
+  width: 100%;
+  bottom: 0;
+  color: #fff;
+  font-size: 12px;
+  padding: 5px 0;
+  text-align: center;
+}
+
+footer a {
+  transition: color 0.1s linear;
+}
+
+footer a.portfolio {
+  text-decoration: underline;
+}
+
+footer a:hover {
+  color: #2EBD59;
+}
